--- a/css/grafos.css
+++ b/css/grafos.css
@@ -37,7 +37,7 @@
     background-color: white;
     border-style: solid;
     border-width: 3px;
-    border-color: black;
+    border-color: #CDA434;
     padding: 10px;
     text-align: center;
 }
@@ -45,8 +45,7 @@
 #edge-popUp {
     display: none;
     position: absolute;
-    /* top:400px;
-    left:350px; */
+    border-radius: 20px;
     z-index: 299;
     width: 250px;
     height: 150px;
@@ -57,18 +56,3 @@
     padding: 10px;
     text-align: center !important;
 }
-
-/*#btnpop .btn {
-    color: #CDA434 !important;
-    border: 1.5px solid #CDA434 !important;
-    border-radius: 20px !important;
-    min-width: 30px !important;
-}
-
-#btnpop .btn:hover {
-    color: black !important;
-    border: 1.5px solid #CDA434;
-    border-radius: 20px;
-    min-width: 30px;
-    background-color: #CDA434 !important;
-}*/
