--- a/css/grafos.css
+++ b/css/grafos.css
@@ -11,13 +11,6 @@
     margin: 0;
 }
 
-
-/*#dibujo {
-    width: 600px !important;
-    height: 400px !important;
-    border: 1px solid lightgray;
-}*/
-
 #resultado {
     position: relative !important;
     width: 700px !important;
@@ -94,4 +87,13 @@
     margin-left: 7% !important;
     margin-right: 7% !important;
     margin: 0;
+}
+
+.border-darks {
+    border-color: var(--dark) !important;
+    border-radius: 20px;
+    min-height: 200px !important;
+    max-width: 850px;
+    margin-left: 10% !important;
+    margin-left: 10% !important;
 }
