--- a/css/grafos.css
+++ b/css/grafos.css
@@ -59,9 +59,11 @@
 .marginbtn {
     margin-left: 75px;
 }
+
 .marginbtn1 {
     margin-left: 140px;
 }
+
 .marginbtn2 {
     margin-left: 25%;
     margin-right: 25%;
@@ -96,9 +98,6 @@
     margin: 0;
 }
 
-
-
-
 .border-darks {
     border-color: var(--dark) !important;
     border-radius: 20px;
@@ -107,6 +106,7 @@
     /*margin-left: 30% !important;
     margin-right: 30% !important;*/
 }
+
 .border-darks {
     border-color: var(--dark) !important;
     border-radius: 20px;
@@ -114,9 +114,15 @@
     max-width: 450px;
     margin-right: 1% !important;
 }
+
 .border-darks:hover {
     border-color: var(--danger) !important;
     border-radius: 20px;
     min-height: 250px !important;
     max-width: 450px;
+}
+
+.marginflotante {
+    margin-right: -80% !important;
+    margin-left: 13%;
 }
